--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+.DS_Store
+.DS_Store?
+
 
 ### STS ###
 .apt_generated
